<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="serviceURL">http://ec2-52-88-167-178.us-west-2.compute.amazonaws.com/AttendanceApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate us</string>
    <string name="action_signout">Sign out</string>
    <string name="action_home">Home</string>
    <string name="action_attendee">Switch to attendee</string>
    <string name="action_change_password">Change password</string>
    <array name="listview_main_facilitator">
        <item>Start taking attendance now</item>
        <item>View reports</item>
        <item>My courses</item>
        <item>My Attendance Calendar</item>
        <item>Manage holidays</item>
        <item>My Schedule</item>
    </array>
    <array name="listview_main_attendee">
        <item>Fill attendance</item>
        <item>View reports</item>
    </array>
    <string name="title_activity_holiday_view">HolidayView</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="title_activity_manage_courses">ManageCourses</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manage_holidays">Manage Holidays</string>
    <string name="loggedInUser_sharedPref_string">loggedInUser</string>
    <string name="userType_sharedPref_string">loggedInUserType</string>
    <string name="isLoggedIn_sharedPref_string">isLoggedIn</string>
    <string name="title_activity_edit_course">Edit Course</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="shareSubject">Hey try Attendance app, its really good</string>
    <string name="shareBody">Download it from here - http://www.google.com</string>
    <string name="helpText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,\n when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, \nand more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n
        Contrary to popular belief, Lorem Ipsum is not simply random text. \nIt has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,\n looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. \nThe first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", \ncomes from a line in section 1.10.32.\n\n
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.\n The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.\n Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n\n
    </string>
    <string name="aboutText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,\n when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, \nand more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n
        Contrary to popular belief, Lorem Ipsum is not simply random text. \nIt has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,\n looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. \nThe first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", \ncomes from a line in section 1.10.32.\n\n
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.\n The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.\n Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n\n
    </string>
    <string name="title_activity_add_holiday">Add Holiday</string>
    <string name="title_activity_main">Attendnace App</string>
    <string name="title_activity_edit_holiday">Edit Holiday</string>
    <string name="title_activity_my_timetable">My Timetable</string>
    <string name="title_activity_test_grid">TestGrid</string>
    <string name="title_activity_add_timetable">AddTimetable</string>
    <string name="title_activity_view_timetable">ViewTimetable</string>
    <string name="title_activity_manage_my_schedule">ManageMySchedule</string>
    <string name="title_activity_manage_attendees">ManageAttendees</string>
    <string name="title_activity_fill_attendance_by_faculty">FillAttendanceByFaculty</string>
    <string name="bundleKeyCourseCode">courseCode</string>
    <string name="bundleKeyAttendanceId">attendanceId</string>
    <string name="bundleKeyTimings">timings</string>
    <string name="bundleKeyDate">date</string>
    <string name="title_activity_main_activity_attendee">MainActivityAttendee</string>
    <string name="title_activity_view_timetable_attendee">ViewTimetableAttendee</string>
    <string name="title_activity_faculty_report">FacultyReport</string>
    <string name="title_activity_fill_attendance_faculty_nfc">FillAttendanceFacultyNFC</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_new_user_registration">NewUserRegistration</string>
    <string name="title_activity_login_user">LoginUser</string>
    <string name="title_activity_student_report">StudentReport</string>
    <string name="title_activity_manage_holiday_recycler">manage_holiday_recycler</string>
</resources>
