<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_home"
          android:title="@string/action_home"
          android:orderInCategory="100"
          app:showAsAction="never"/>
      <item android:id="@+id/action_share"
            android:title="@string/action_share"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_help"
            android:title="@string/action_help"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_change_password"
            android:title="@string/action_change_password"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_signout"
            android:title="@string/action_signout"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
